<resources>
    <string name="app_name">Gasto Viagens</string>
    <string name="distancia">Distancia</string>
    <string name="total_de_quilometros">Total de quilometros</string>
    <string name="pre_o">Preço</string>
    <string name="pec_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="seu_gasto_total_sera_de">seu gasto total sera de:</string>
    <string name="valor">R$ 0</string>
    <string name="calcular">calcular</string>
    <string name="validation_field_all_fields">Preencha todos os campos</string>
</resources>