<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="12dp"
        android:hint="@string/distancia"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/total_de_quilometros" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="12dp"
        android:hint="@string/pre_o"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/pec_litro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="12dp"
        android:hint="@string/autonomia"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/kms_por_litro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="12dp"
        android:gravity="center"
        android:text="@string/seu_gasto_total_sera_de"
        android:textAllCaps="true"
        android:textSize="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="12dp"
        android:gravity="center"
        android:text="@string/valor"
        android:textColor="@color/black"
        android:textSize="38dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="12dp"
        android:background="#32CD32"
        android:gravity="center"
        android:text="@string/calcular" />

</LinearLayout>